--- a/src/components/Headline.module.scss
+++ b/src/components/Headline.module.scss
@@ -1,3 +1,5 @@
+@import '../styles/text';
+
 .headline {
   font-family: SZSansDigital, Helvetica, Arial, Helvetica, sans-serif;
 }
@@ -5,20 +7,25 @@
 // sizes
 .h1 {
   font-size: 72px;
+  @include text-crop-sz-sans(1.2);
 }
 
 .h2 {
   font-size: 48px;
+  @include text-crop-sz-sans(1.3);
 }
 
 .h3 {
   font-size: 32px;
+  @include text-crop-sz-sans(1.4);
 }
 
 .h4 {
   font-size: 24px;
+  @include text-crop-sz-sans(1.5);
 }
 
 .h5 {
   font-size: 16px;
+  @include text-crop-sz-sans(1.6);
 }
